Just cleaning things up and getting ready to finish this project once and for all :)

--- a/3D_Portfolio-main/index.html
+++ b/3D_Portfolio-main/index.html
@@ -1,3 +1,9 @@
+<!-- Author: Gavin Ogren 
+ Date : 2025 - 6 - 8 
+ Description: This is my portfoilo Project, it is a 3D scene that showcases me and my background. 
+ It is buuilt using Three.js and I wanted it to be a fun way to show off 
+ 
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
