--- a/3D_Portfolio-main/index.html
+++ b/3D_Portfolio-main/index.html
@@ -1,25 +1,17 @@
-<!-- Author: Gavin Ogren 
- Date : 2025 - 6 - 8 
- Description: This is my portfoilo Project, it is a 3D scene that showcases me and my background. 
- It is buuilt using Three.js and I wanted it to be a fun way to show off 
- 
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Project</title>
-    <!-- Favicon -->
-    <link rel="icon" href="icon.png" type="image/png">
-    <!-- Three JS library included -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-
-    
+  <meta charset="UTF-8" />
+  <title>Portfolio Project</title>
+  <icon rel="icon" href="Images/icon.png" />
+  <link rel="stylesheet" href="style.css" />
+  <!-- Load three.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <!-- Load GLTFLoader (non-module) -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
-    <div id="scene-container"></div>
-    <script src="script.js"></script>    
+  <div id="scene-container"></div>
+  <script src="script.js"></script>
 </body>
 </html>
