- Added Images and Textures
- Added a new text mesh myjourney

- made rocket move with the camera

--- a/3D_Portfolio-main/index.html
+++ b/3D_Portfolio-main/index.html
@@ -1,17 +1,34 @@
+
 <!DOCTYPE html>
+
+
 <html lang="en">
+
+
 <head>
-  <meta charset="UTF-8" />
-  <title>Portfolio Project</title>
-  <icon rel="icon" href="Images/icon.png" />
-  <link rel="stylesheet" href="style.css" />
-  <!-- Load three.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <!-- Load GLTFLoader (non-module) -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio Project</title>
+    <!-- Favicon -->
+    <link rel="icon" href="Images/icon.png" type="image/png">
+    <!-- Three JS library included -->
+     <!-- Load three.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- Load GLTFLoader (non-module) -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
+
 <body>
-  <div id="scene-container"></div>
-  <script src="script.js"></script>
+
+
+    <div id="scene-container"></div>
+
+    <script src="script.js"></script>
+
 </body>
+
 </html>
