- Made a astronaut cursor

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 <body>
 
 
-    <div id="scene-container"></div>
+    <div class= "module" id="scene-container">
+        <script src="script.js"></script>
+    </div>
 
-    <script src="script.js"></script>
+    
 
 </body>
-
+    
 </html>
