--- a/index.html
+++ b/index.html
@@ -1,36 +1,13 @@
-
-<!DOCTYPE html>
-
-
+<!doctype html>
 <html lang="en">
-
-
-<head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Project</title>
-    <!-- Favicon -->
-    <link rel="icon" href="Images/icon.png" type="image/png">
-    <!-- Three JS library included -->
-     <!-- Load three.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <!-- Load GLTFLoader (non-module) -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-    <link rel="stylesheet" href="style.css">
-
-</head>
-
-
-<body>
-
-
-    <div class= "module" id="scene-container">
-        <script src="script.js"></script>
-    </div>
-
-    
-
-</body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
